<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Airbnb</string>

    <!-- Drawer -->
    <string name="invite_friends">Invite Friends</string>
    <string name="why_host">Why Host?</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="list_your_space">List Your Space</string>

    <!-- Listing -->
    <string name="error_loading_listing">Error loading listing</string>
    <string name="per_night">Per night</string>
    <string name="contact_host">Contact Host</string>
    <string name="hosted_by">
        Hosted by
        <xliff:g id="name" example="Victoria">%s</xliff:g>
    </string>
    <string name="private_room">Private Room</string>
    <string name="entire_home">Entire Home</string>
    <string name="number_of_guests">
        <xliff:g id="number" example="4">%s</xliff:g>
        guests
    </string>
    <string name="number_of_bedrooms">
        <xliff:g id="number" example="4">%s</xliff:g>
        bedrooms
    </string>
    <string name="number_of_beds">
        <xliff:g id="number" example="4">%s</xliff:g>
        beds
    </string>
    <string name="view_all">View All</string>
    <string name="request_to_book">Request to Book</string>
    <plurals name="number_of_reviews">
        <item quantity="one">%d review</item>
        <item quantity="other">%d reviews</item>
    </plurals>
</resources>
