<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/white" >

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <android.support.design.widget.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="0dp"
                    android:layout_height="?android:attr/actionBarSize"
                    android:layout_weight="1" />
                <ImageButton
                    android:id="@+id/drawer_profile_button"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="48dp"
                    android:src="@drawable/icon_action_drawer"
                    android:background="?android:attr/selectableItemBackgroundBorderless" />
            </LinearLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/drawer"
        android:layout_width="264dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="end"
        android:background="@android:color/white" >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:background="#ebebeb" >
            <com.airbnb.ui.RoundedImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:src="@drawable/profile"
                app:strokeWidth="3dp" />
        </FrameLayout>
        <Button
            style="@style/DrawerItem.Light"
            android:text="@string/invite_friends" />
        <Button
            style="@style/DrawerItem.Light"
            android:text="@string/why_host" />
        <Button
            style="@style/DrawerItem.Light"
            android:text="@string/help" />
        <Button
            style="@style/DrawerItem.Light"
            android:text="@string/settings" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            style="@style/DrawerItem.Dark"
            android:text="@string/list_your_space" />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>